# ekg-sandbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: properties.cmake
src/: application.hpp  ekg-showcase.cpp  ekg_gui_showcase_test.cpp  ekg_gui_showcase_test_v1.cpp
src/deprecated/: deprecated-version-v1.x.x.cpp
